'show more' button upgrade

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 			<h2 class="main__heading"><span class="accent">New</span> Arrivals</h2>
 			<p class="main__description">Lorem ipsum is a simply dummy text of the printing and typesetting idustry</p>
 			<div class="arrivals__items">
-				<div class="arr-item">
+				<div class="arr-item" style="display: block">
 					<img src="images/jacket_red.jpg" 
 					class="arr-item__img">
 					<h4 class="main__item-description">Red Winter Coat</h4>
@@ -120,7 +120,7 @@
 						onmouseout="this.src='icons/heart.png'">
 					</div>
 				</div>
-				<div class="arr-item">
+				<div class="arr-item" style="display: block">
 					<img src="images/jacket_grey.jpg" 
 					class="arr-item__img">
 					<h4 class="main__item-description">Grey Winter Jacket</h4>
@@ -149,7 +149,7 @@
 						onmouseout="this.src='icons/heart.png'">
 					</div>
 				</div>
-				<div class="arr-item">
+				<div class="arr-item" style="display: block">
 					<img src="images/jacket_red.jpg" 
 					class="arr-item__img">
 					<h4 class="main__item-description">Red Winter Coat</h4>
@@ -178,7 +178,7 @@
 						onmouseout="this.src='icons/heart.png'">
 					</div>
 				</div>
-				<div class="arr-item">
+				<div class="arr-item" style="display: block">
 					<img src="images/jacket_red_sport.jpg"
 					class="arr-item__img">
 					<h4 class="main__item-description">Red Sport Jacket</h4>
@@ -207,7 +207,7 @@
 						onmouseout="this.src='icons/heart.png'">
 					</div>
 				</div>
-				<div class="arr-item">
+				<div class="arr-item" style="display: none">
 					<img src="images/jacket_red.jpg"
 					class="arr-item__img">
 					<h4 class="main__item-description">Red Winter Coat</h4>
@@ -236,7 +236,7 @@
 						onmouseout="this.src='icons/heart.png'">
 					</div>
 				</div>
-				<div class="arr-item">
+				<div class="arr-item" style="display: none">
 					<img src="images/jacket_red.jpg" 
 					class="arr-item__img">
 					<h4 class="main__item-description">Red Winter Coat</h4>
@@ -265,7 +265,7 @@
 						onmouseout="this.src='icons/heart.png'">
 					</div>
 				</div>
-				<div class="arr-item">
+				<div class="arr-item" style="display: none">
 					<img src="images/jacket_red.jpg"
 					class="arr-item__img">
 					<h4 class="main__item-description">Red Winter Coat</h4>
@@ -294,7 +294,7 @@
 						onmouseout="this.src='icons/heart.png'">
 					</div>
 				</div>
-				<div class="arr-item">
+				<div class="arr-item" style="display: none">
 					<img src="images/jacket_red.jpg"
 					class="arr-item__img">
 					<h4 class="main__item-description">Red Winter Coat</h4>
